#summary Changelog for all changes since the fork

= Changes =
== Version 1.25 ==
  * Reduced time to switch activities
  * Tried to prevent display of empty datasets
  * Fixed ImageCache for devices running Android 4.x 
  * Minor Bugfixes

== Version 1.24 ==
  * Performance-Optimizations for faster startup
  * Fix starred/published articles never beeing purged
  * Minor Bugfixes

== Version 1.23 ==
  * Downloaded attachments are opened when tapping the notification now
  * Player for downloaded files is chosen depending on file-extension (internal display of media-files hasn't changed)  
  * Minor Bugfixes

== Version 1.22 ==
  * Added support for new API of TTRSS 1.5.8 (due January 2012)
  * Added Enhancement #65: ([https://code.google.com/p/ttrss-reader-fork/issues/detail?id=65 Publish with a note])
  * Notes are also cached if working offline, later they are automatically synchronized with the server
  * Fixed not-working "mark as unread" menu entry
  * Ignore specific SSLExceptions which often occur on bad connections
  * Added check for http status code "401 Unauthorized"
  * Fetching only new articles once on startup (API gives information about this since v1.5.8)

== Version 1.21 ==
  * Fixed wrong handling of Usage-options
  * Trying to fix ActivityNotFoundExceptions which affected some users
  * Added preference for "Inject Article-Link"

== Version 1.2 ==
  * Added compatibility-code for Android 4.0 (API-Level 14)
  * Started working on a three-pane-layout for tablet-devices (not functional yet)
  * Fixed Issue #80: ([https://code.google.com/p/ttrss-reader-fork/issues/detail?id=80 Broken list in JSON request])
  * Fixed Enhancement #77: ([https://code.google.com/p/ttrss-reader-fork/issues/detail?id=77 Support lazy servers (no cron job for fetching feeds)])
  * Fixed Enhancement #79: ([https://code.google.com/p/ttrss-reader-fork/issues/detail?id=79 Inject a link to the web article at the end of the RSS article])
  * Minor bugfixes and refactoring
